--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,36 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+/* styling container */
+.container{
+    background-color: gray;
+    padding: 10px;
+    margin: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.item{
+    background-color: red;
+    color: white;
+    padding: 20px;
+    margin: 10px;
+    font-size: 30px;
+}
+
+.items-3{
+    height: 200px;
+}
+
+.items-5{
+    font-size: 90px;
+}
+
+.items-4{
+    align-self: flex-end;
 }
